--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3"
