--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       dockerfile: "Dockerfile"
     container_name: python-server
     stdin_open: true
+    tty: true
     ports:
       - 8082:8082
   denoserver:
