--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
