--- a/servers/docker-compose.yml
+++ b/servers/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     ports:
       - 8086:8086
     environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/garplyDB
+      DATABASE_URL: postgres://postgres:password@db:5432/garply
     depends_on:
       - garplydb
   garplydb:
@@ -67,7 +67,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: garplyDB
+      POSTGRES_DB: garply
     volumes:
       - pgdata:/var/lib/postgresql/data
 
