--- a/servers/garply/package.json
+++ b/servers/garply/package.json
@@ -11,6 +11,8 @@
   "author": "Willem Verbuyst",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.13.1"
   }
